# CRMS_On_VxWorks

./: .gitignore  CMakeLists.txt  main.cpp  makefile  readme.md
debug/: makefile
doc/: CRMD On VxWorks设计框架图.vsdx  CRMS On VxWorks概要设计.docx  CRMS.postman_collection.json  CRMS资源定义v1.0.docx  CRMS资源定义v1.1.docx  DBAgent.java  Vxworks 6..6使用教程及网络配置教程docx.docx  createTable.cql  ~$MS资源定义v1.1.docx
launch/: launcher.cpp
protocol/: common.h  keyword.h  makefile
protocol/agent/request_handler/: request_handler.cpp  request_handler.h
protocol/agent/resource_handler/: Creator.h  HandlerBase.h  NodeHandler.h  attribute_handler.cpp  attribute_handler.h  command_handler.cpp  command_handler.h  data_table_handler.cpp  data_table_handler.h  group_handler.cpp  group_handler.h  node_handler.cpp  node_handler.h  remote_attribute_handler.cpp  remote_attribute_handler.h  remote_command_handler.cpp  remote_command_handler.h  remote_resource_object_handler.cpp  remote_resource_object_handler.h  resource_handler.cpp  resource_handler.h  resource_object_handler.cpp  resource_object_handler.h  root_resource_handler.cpp  root_resource_handler.h  subscription_handler.cpp  subscription_handler.h
protocol/agent/resource_handler/resource_operator/: Creator.h
protocol/agent/resource_operator/: resource_operator.cpp  resource_operator.h
protocol/agent/resource_pool/: resource_pool.cpp  resource_pool.h
protocol/json_support/: DateSupport.h  DateTimeSupport.h  DurationSupport.h  Serialization.h  SupportBase.h  crms_primitive_content_type_serialization.cpp  crms_primitive_content_type_serialization.h  crms_serialization.h  datetime_support.h  duration_support.h  support_base.h
protocol/json_support/crms_common/: BatchNotifySupport.h  SubscriptionSupport.h  crms_batch_notify_support.h  crms_child_resource_ref_support.h  crms_filter_criteria_support.h  crms_subscription_support.h
protocol/json_support/crms_enumeration/: EnumerationSupport.h  crms_enumeration_support.h
protocol/json_support/crms_primitive/: PrimitiveContentTypeSupport.cpp  PrimitiveContentTypeSupport.h  crms_primitive_content_type_support.cpp  crms_primitive_content_type_support.h
protocol/json_support/crms_resource/: AttributeSupport.h  ResourceSupport.h  crms_attribute_support.h  crms_command_support.h  crms_data_table_support.h  crms_group_support.h  crms_has_children_support.h  crms_node_support.h  crms_remote_attribute_support.h  crms_remote_command_support.h  crms_remote_resource_object_support.h  crms_resource_object_support.h  crms_resource_support.h  crms_root_resource_support.h
protocol/resource/: AttributeType.h  DEF.h  DefMem.h  Object.h  Serialization.h  Type.h
protocol/resource/crms_attribute/: CRMS_BatchNotify.h  CRMS_FilterCriteria.h  CRMS_Subscription.h
protocol/resource/crms_common/: CRMS_AggregatedNotification.h  CRMS_AggregatedResponse.h  CRMS_BatchNotify.h  CRMS_ChildResourceRef.h  CRMS_FilterCriteria.h  CRMS_Notification.h  CRMS_Pagination.h  CRMS_PaginationRetrieve.h  CRMS_PartialRetrieve.h  CRMS_RetrieveQuery.h  CRMS_Subscription.h  CRMS_SubscriptionRef.h  CRMS_SubscriptionRetrieve.h
protocol/resource/crms_enumeration/: CRMS_ConsistencyStrategy.h  CRMS_MemberType.h  CRMS_NodeExecutionState.h  CRMS_NotificationContentType.h  CRMS_Operation.h  CRMS_PartialRetrieveType.h  CRMS_ResourceStatus.h  CRMS_ResourceType.h  CRMS_ResponseStatusCodeType.h  CRMS_ResultContent.h  CRMS_RetrieveQueryType.h  CRMS_SubscriptionEventType.h  CRMS_SubscriptionOperation.h  EnumerationBase.h
protocol/resource/crms_primitive/: CRMS_PrimitiveContentType.h  CRMS_Req.h  CRMS_Req_Rsp.h  CRMS_Rsp.h
protocol/resource/crms_resource/: CRMS_Attribute.h  CRMS_ChildResourceRef.h  CRMS_Command.h  CRMS_DataTable.h  CRMS_Group.h  CRMS_HasChildren.h  CRMS_Node.h  CRMS_PrimitiveContentType.h  CRMS_RemoteAttribut.h  CRMS_RemoteAttribute.h  CRMS_RemoteCommand.h  CRMS_RemoteResouceObject.h  CRMS_RemoteResourceObject.h  CRMS_Req.h  CRMS_Req_Rsp.h  CRMS_ResouceObject.h  CRMS_Resource.h  CRMS_ResourceObject.h  CRMS_RootResource.h  CRMS_Rsp.h
protocol/resource/support/: DateSupport.h  DurationSupport.h  EnumerationSupport.h  PrimitiveContentTypeSupport.cpp  PrimitiveContentTypeSupport.h
resource/: DefMem.h  Enumeration.h  InnerRes.h  Res.h  Resource.h  Serialization.h
resource/Date/: Date.h  DateSupport.h
resource/Duration/: Duration.h  DurationSupport.h
resource/crms_attribute/: CRMS_BatchNotify.h  CRMS_FilterCriteria.h  CRMS_Subscription.h
resource/crms_enumeration/: CRMS_NodeExecutionState.h  CRMS_Operation.h  CRMS_ResponseStatusCodeType.h  CRMS_ResultContent.h  CRMS_SubscriptionOperation.h  EnumerationBase.h  EnumerationSupport.h
resource/crms_resource/: CRMS_Attribute.h  CRMS_Children.h  CRMS_Command.h  CRMS_PrimitiveContentType.h  CRMS_Req.h  CRMS_Resource.h  CRMS_RootResource.h  CRMS_Rsp.h
resource/support/: DateSupport.h  DurationSupport.h  EnumerationSupport.h
test/: Test_Tool.cpp  Test_Tool.h
test/test_crud/: test.cpp  test_create.cpp  test_crud.cpp  test_delete.cpp  test_retrieve.cpp  test_root_resource.cpp  test_update.cpp
test/test_serialization/: test_enumeration.cpp  test_req.cpp  test_req_rsp.cpp  test_rsp.cpp
utility/: makefile
utility/DBUtil/: DBUtil.cpp  DBUtil.h
utility/DateTime/: Date.h  DateTime.h  Duration.h
utility/HttpUtil/: Client.cpp  Client.h  HttpUtil.h  Server.cpp  Server.h  makefile  mongoose.c  mongoose.h
utility/nJson/: DEF.h  json.h  makefile  nJson.h  parson.h
utility/nJson/parson/: makefile
utility/nJson/support/: basic_type.h  cstr_type.h  list_type.h  map_type.h  pointer_type.h  string_to.h  string_type.h  to_string.h  userdef_type.h
utility/resource_pool/: resource_pool.cpp  resource_pool.h
